--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,18 @@ license = "MIT"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+black = "^22.1.0"
+mypy = "^0.941"
+pytest = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+check_untyped_defs = true
+ignore_missing_imports = true
+show_error_codes = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
